  - CHG: Replace population::mergePopulation by population::addIndFromPop.
  - CHG: Replace population::mergePopulationByLoci by population::addChromFromPop
		and population::addLociFromPop.
  - CHG: Remove removeEmptySubPops parameter from population::mergeSubPops.
  - CHG: Adjust interface to population::removeLoci.
  - CHG: Adjust interface to population::removeSubPops.


version 0.8.8 - (Rev 1787) Oct 24, 2008
  - CHG: Remove the replicate group feature.
  - NEW: Allow mapSelector to work for all ploidy.
  - DOC: Add keyword applicability to indicate applicability of operators.
  - DOC: Document applicability of mating schemes.
  - DOC: Fix bibtex references of user's guide and reference manual.
  - CHG: indiviudal::arrGenotype, individual::arrInfo are marked obsolete
		and will be removed later.
  - NEW: add individual::genotype (previously called arrGenotype) and
		individual::arrGenotype.
  - CHG: genoStruTrait::arrLociPos is marked obsolete and will be removed
		later.
  - CHG: population arrGenotype are marked obsolete and will be removed
		later.
  - NEW: add population::genotype and population::setGenoytpe.
  - BUG: Fix a bug in simuRPy.py that prevents varPlotter from plotting
		images.
  - NEW: Support Python 2.6.

version 0.8.7 - (Rev 1755) Aug 29, 2008
  - NEW: allow the use of a list to specify a virtual subpopulation.
  - NEW: change the return type of allele() so that no boolean value (True or False)
		will be returned from the binary modules.
  - DOC: Correct documentation about variables related to genotype and heterozygote frequency.
  - BUG: Fix a bug when a zero-sized virtual subpopulation has weight -1.
  - BUG: Fix a bug when calculating expected heterozygosity with increased
		number of subpopulations.
  - BUG: Fix a bug in controlled random mating where number of affected alleles
		are calculated from current instead of offspring populations.
  - CHG: Only write (compressed if possible) in text format. simuPOP can still