@@ -29,6 +29,7 @@ version 0.8.9 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Remove removeEmptySubPops parameter from population::mergeSubPops.
   - CHG: Adjust interface to population::removeLoci.
   - CHG: Adjust interface to population::removeSubPops.
+  - NEW: Allow indInfo, setInfo etc to access virtual subpopulation.
 
 
 version 0.8.8 - (Rev 1787) Oct 24, 2008
